# HomeNetSupervise

./: .gitignore  Dockerfile  LICENSE  README.md  backend.py  castrate_oui.py  config.yaml  deploy.sh  docker-compose.yml  oui.json  pyproject.toml  requirements.txt  scanner.py
config/: config.yaml
frontend/: index.html
