[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homenetsupervise"
version = "0.1.0"
description = "A monitoring tool for home networks"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "HighImp" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "flask>=2.0.0",
    "pyyaml>=6.0",
    "python-nmap>=0.7.1",
    "scapy>=2.5.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.3",
    "async-lru>=2.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/HighImp/HomeNetSupervise"
Repository = "https://github.com/HighImp/HomeNetSupervise.git"
Issues = "https://github.com/HighImp/HomeNetSupervise/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=homenetsupervise" 